# protobuf_js_rust_playground

protocol/src/: union.proto
python/: Pipfile  generate.sh  main.py
python/src/: attachment_pb2.py  commands_pb2.py  common_pb2.py  error_pb2.py  event_pb2.py  grabbing_pb2.py  observe_pb2.py  progress_pb2.py  sde_pb2.py
rs/: Cargo.toml
rs/src/: main.rs
rs_protoc/: generate.sh  generate_rust_out.sh
ts/: package.json
ts/src/: index.ts
ts_gen_ts/: package.json
ts_pbjs/: package.json  tsconfig.json
ts_pbjs/src/: index.ts
ts_wasm/: package.json
ts_wasm/src/: index.ts
