[package]
name = "protobuf_test"
version = "0.1.0"
authors = ["Oliver Mueller <oliver.mueller@esrlabs.com>"]
edition = "2018"

[dependencies]
prost = "0.12.6"
prost-types = "0.12.6"
protocol = { path = "../protocol/gen/binding/rust/protocol" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.120"
